@startuml class
left to right direction

class User {
    id : String
    name : String
    about : String
    passwd : LargeBinary
}

enum SchoolType {
    elementary
    middle
    high
}

enum SchoolStatus {
    open
    closed
}

class School {
    id : Integer
    name : String
    address : String
    type : SchoolType
    status : SchoolStatus
}

class TransportationCost {
    from_school_id : Integer
    to_school_id : Integer
    cost : Integer
}

TransportationCost "0..*" --> "1" School : from_school
TransportationCost "0..*" --> "1" School : to_school

@enduml
